# system-programming

./: .gitignore  CMakeLists.txt  README.md  docker-second-connection.sh
src/andiswiss/: IMPORTANT_NOTE.md  README.md  hello.c  hello2.c  hello3.c  w01a_various_stuff.c
src/andiswiss/assessment_1_2019_november/: README.md  a1.c  a11_threads_and_synchronization.c  a1_which_compile.c  a2.c  a2_difference_between_variables.c  a3.c  a3_function_reverse_a_string.c  a4.c  a4_passing_array_pointer_into_function.c  a5.c  a5_eval_passing_a_function_into_a_function.c  a6_sort_a_list_of_nodes.c  a7_file_in_output.c  a7_file_in_output_v2.c  a8_zombie_process.c  table.csv
src/andiswiss/lib/: ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
src/andiswiss/tlpi-book/: README_AA.md
src/andiswiss/w00_introduction/: w00a_hello_world.c
src/andiswiss/w01_first_steps_in_c/: my_args.c  my_range.c  my_tree.c  various_stuff.c
src/andiswiss/w01_hands_on/: makefile  my_args.c
src/andiswiss/w02_functions/: error.c  garbage.c  map.c  max.c  my_kilo.c  my_kilo.md  my_struct_v2.c  scope.c  struct.c  swap.c  sys_t.c
src/andiswiss/w02_functions/heater/: home.c  makefile
src/andiswiss/w02_functions/linked_example/: linked_f.c  linked_main.c
src/andiswiss/w03_file_io/: fileA.txt  lseek.c  my_copy.c  my_logger.c  my_write_bytes.c  stdio_buf.c  tmp_file.c
src/andiswiss/w04_processes_and_signals/: args.c  environ.c  heap.c  my_heap.c  my_malloc.c  my_sigint.c  pause.c  segments.c  size.c  various.c
src/andiswiss/w05_process_lifecycle/: execlp.c  fork_signals_sync.c  my_fork.c  my_system.c  my_zombie.c  time_stuff.c
src/andiswiss/w05_process_lifecycle/bye/: trap.c
src/andiswiss/w06_threads_and_sychronization/: about_void_pointers.c  eintr.c  errno.sh  math.c  my_pthreads.c  prod_cons.c  prodcons0.c  prodcons1.c  prodcons2.c  prodcons3.c  pthread_creation_and_termination.c  pthread_join.c  pthread_multiple_args_via_struct.c  pthread_one_int_arg.c
src/andiswiss/w07_no_class/: README.md
src/andiswiss/w08_ipc_with_pipes/: my_fifo_r.c  my_fifo_w.c  my_pipe.c
src/andiswiss/w09_sockets/: http_client.c  http_server.c  makefile  tut_byteorder.c  tut_client.c  tut_server.c  tut_server_multi.c
src/andiswiss/w10_posix_ipc/: README.md
src/andiswiss/w11_time_measurement/: pthread_example.c  strtime.c
src/mike/: fifo1.c  mqattr.c  mqcreate.c
src/mikenoethiger/: fifo2.c  http-client.c  http-server.c  mqrec.c  mqsend.c
