cmake_minimum_required(VERSION 3.16)
project(FHNW_syspr_system_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(FHNW_syspr_system_programming
        src/andiswiss/w00_introduction/w00a_hello_world.c
        src/libs/my_stdlib.c
        src/mikenoethiger/libs/my_stdlib.c
        src/mikenoethiger/echo-client.c
        src/mikenoethiger/echo-server.c
        src/mikenoethiger/fifo1.c
        src/mikenoethiger/fifo2.c
        src/mikenoethiger/http-client.c
        src/mikenoethiger/http-server.c
        src/mikenoethiger/makefile
        src/mikenoethiger/mqattr.c
        src/mikenoethiger/mqcreate.c
        src/mikenoethiger/mqrec.c
        src/mikenoethiger/mqsend.c
        src/mikenoethiger/mutex1.c
        src/mikenoethiger/mutex2.c
        src/mikenoethiger/pipe1.c
        src/mikenoethiger/pipe2.c
        src/mikenoethiger/pipe3.c
        src/mikenoethiger/pipe4.c
        src/mikenoethiger/semaphore1.c
        src/mikenoethiger/semaphore2.c
        src/mikenoethiger/semaphore3.c
        src/mikenoethiger/stream-client.c
        src/mikenoethiger/stream-server.c
        src/mikenoethiger/terminal1.c
        src/mikenoethiger/thread1.c
        src/mikenoethiger/thread2.c
        src/mikenoethiger/time1.c
        src/mikenoethiger/time2.c
        src/mikenoethiger/time3.c
        src/mikenoethiger/time4.c
        src/makefile
        src/andiswiss/w01_first_steps_in_c/various_stuff.c
        src/andiswiss/w01_first_steps_in_c/my_range.c
        src/andiswiss/w01_first_steps_in_c/my_args.c
        src/andiswiss/w01_first_steps_in_c/my_tree.c
        src/andiswiss/w02_functions/swap.c
        src/andiswiss/w02_functions/linked_example/linked_main.c
        src/andiswiss/w02_functions/linked_example/linked_f.c
        src/andiswiss/w02_functions/struct.c
        src/andiswiss/w02_functions/my_struct_v2.c
        src/andiswiss/w02_functions/scope.c
        src/andiswiss/w02_functions/heater/heater.c
        src/andiswiss/w02_functions/heater/home.c
        src/andiswiss/w02_functions/garbage.c
        src/andiswiss/w02_functions/map.c
        src/andiswiss/w02_functions/max.c
        src/andiswiss/w02_functions/error.c
        src/andiswiss/w02_functions/sys_t.c
        src/andiswiss/w02_functions/my_kilo.c
        src/andiswiss/w03_file_io/my_copy.c
        src/andiswiss/w03_file_io/lseek.c
        src/andiswiss/w03_file_io/my_logger.c
        src/andiswiss/w03_file_io/stdio_buf.c
        src/andiswiss/w03_file_io/tmp_file.c
        src/andiswiss/w03_file_io/my_write_bytes.c
        src/andiswiss/w04_processes_and_signals/my_malloc.c
        src/andiswiss/w04_processes_and_signals/makefile
        src/andiswiss/w11_time_measurement/strtime.c
        src/andiswiss/w04_processes_and_signals/various.c
        src/andiswiss/w04_processes_and_signals/segments.c
        src/andiswiss/w04_processes_and_signals/args.c
        src/andiswiss/w04_processes_and_signals/environ.c
        src/andiswiss/w04_processes_and_signals/my_heap.c
        src/andiswiss/w04_processes_and_signals/size.c
        src/andiswiss/w04_processes_and_signals/my_sigint.c
        src/andiswiss/w04_processes_and_signals/pause.c
        src/andiswiss/w05_process_lifecycle/my_fork.c
        src/andiswiss/w05_process_lifecycle/time_stuff.c
        src/andiswiss/w05_process_lifecycle/fork_signals_sync.c
        src/andiswiss/w05_process_lifecycle/my_zombie.c
        src/andiswiss/w05_process_lifecycle/execlp.c
        src/andiswiss/w05_process_lifecycle/my_system.c
        src/andiswiss/w06_threads_and_sychronization/about_void_pointers.c
        src/andiswiss/w06_threads_and_sychronization/pthread_creation_and_termination.c
        src/andiswiss/w06_threads_and_sychronization/pthread_one_int_arg.c
        src/andiswiss/w06_threads_and_sychronization/pthread_multiple_args_via_struct.c
        src/andiswiss/w06_threads_and_sychronization/pthread_join.c
        src/andiswiss/w06_threads_and_sychronization/math.c
        src/andiswiss/w06_threads_and_sychronization/my_pthreads.c
        src/andiswiss/w06_threads_and_sychronization/eintr.c
        src/andiswiss/w06_threads_and_sychronization/prod_cons.c
        src/andiswiss/assessment_1_2019_november/a1_which_compile.c
        src/andiswiss/assessment_1_2019_november/a2_difference_between_variables.c
        src/andiswiss/assessment_1_2019_november/a3_function_reverse_a_string.c
        src/andiswiss/assessment_1_2019_november/a4_passing_array_pointer_into_function.c
        src/andiswiss/assessment_1_2019_november/a5_eval_passing_a_function_into_a_function.c
        src/andiswiss/assessment_1_2019_november/a6_sort_a_list_of_nodes.c
        src/andiswiss/assessment_1_2019_november/a7_file_in_output.c
        src/andiswiss/assessment_1_2019_november/a7_file_in_output_v2.c src/andiswiss/w06_threads_and_sychronization/prodcons0.c src/andiswiss/w06_threads_and_sychronization/prodcons1.c src/andiswiss/w06_threads_and_sychronization/prodcons2.c src/andiswiss/w06_threads_and_sychronization/prodcons3.c src/andiswiss/w08_ipc_with_pipes/my_pipe.c)
